--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             </ul>
                             <p class="date">Enero del 2023 - Mayo del 2023</p>
                             <P class="ubi">Ubicación</P>
-                            <iframe 
+                            <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15948.207412989688!2d-79.91336256037164!3d-2.133776472599118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6d6c473b4f7d%3A0xce9e50186bf58bd8!2sLa%20Alborada%2C%20Guayaquil!5e0!3m2!1ses!2sec!4v1716600370244!5m2!1ses!2sec"
                                 width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade">
@@ -133,8 +133,7 @@
                 <ul class="skill-list">
 
                     <li class="item">
-                        <img src="https://www.escuelaweb.com.mx/img/java-logo.png"
-                            alt="java">
+                        <img src="https://www.escuelaweb.com.mx/img/java-logo.png" alt="java">
                         <meter value="60" min="0" max="100">60%</meter>
                     </li>
 
@@ -145,8 +144,7 @@
                     </li>
 
                     <li class="item">
-                        <img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png"
-                            alt="">
+                        <img src="https://cdn-icons-png.flaticon.com/512/6132/6132222.png" alt="">
                         <meter value="40" min="0" max="100">40%</meter>
                     </li>
 
@@ -162,8 +160,7 @@
                         <meter value="70" min="0" max="100">70%</meter>
                     </li>
                     <li class="item">
-                        <img src="https://cdn-icons-png.flaticon.com/512/919/919826.png"
-                            alt="">
+                        <img src="https://cdn-icons-png.flaticon.com/512/919/919826.png" alt="">
                         <meter value="70" min="0" max="100">70%</meter>
                     </li>
                 </ul>
@@ -190,8 +187,7 @@
                 <h4>Herramientas de Diseño</h4>
                 <ul class="skill-list">
                     <li class="item">
-                        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968705.png"
-                            alt="">
+                        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968705.png" alt="">
                         <meter value="80" min="0" max="100">80%</meter>
                     </li>
                 </ul>
@@ -200,20 +196,32 @@
 
         <section class="education" id="education">
             <h2 class="subtitulo">Educación</h2>
-            <div class="cronology">
-                <div class="study" id="basica-superior">
+            <div class="container cronology">
+                <div class="study">
                     <h4>Básica Superior</h4>
                     <p>Unidad Educativa "San Benildo La Salle" (2014-2018)</p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9623.83386092038!2d-79.94774977491838!3d-2.1279973936361474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d72be1da6b14b%3A0xd05b8a43fa64a5f6!2sColegio%20particular%20SAN%20BENILDO%20LA%20SALLE!5e0!3m2!1ses!2sec!4v1716697113605!5m2!1ses!2sec"
+                        width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="study" id="bachillerato">
+                <div class="study">
                     <h4>Bachillerato Técnico</h4>
                     <p>Unidad Educativa "San Benildo La Salle" (2018-2021)</p>
                     <p>Especialidad: Informática</p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9623.83386092038!2d-79.94774977491838!3d-2.1279973936361474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d72be1da6b14b%3A0xd05b8a43fa64a5f6!2sColegio%20particular%20SAN%20BENILDO%20LA%20SALLE!5e0!3m2!1ses!2sec!4v1716697113605!5m2!1ses!2sec"
+                        width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="study" id="educacion-superior">
+                <div class="study">
                     <h4>Educación Superior</h4>
                     <p>Escuela Superior Politécnica del Litoral (2021-Actualidad)</p>
                     <p>Ingeniería en Computación</p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31896.316957757954!2d-79.9764392264756!3d-2.1384896758083416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d72f925e5bfdb%3A0x327cdb9f7f4ba3b2!2sEscuela%20Superior%20Polit%C3%A9cnica%20del%20Litoral%20(ESPOL)!5e0!3m2!1ses!2sec!4v1716697433053!5m2!1ses!2sec"
+                        width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
@@ -255,31 +263,29 @@
             </div>
         </section>
 
+
         <section class="contacto" id="contact">
             <h2 class="subtitulo">Formulario de Contacto</h2>
             <form id="formulario">
-                <label for="nombre">Nombres:</label>
-                <input type="text" id="nombre" name="nombre" required="required" /><br>
+                <div class="input">
+                    <label for="name">Nombre</label>
+                    <input type="text" name="name" id="name" placeholder="Nombre">
 
-                <label for="apellido">Apellidos:</label>
-                <input type="text" id="apellidos" name="apellidos" required="required" /><br>
+                    <label for="phone">Teléfono</label>
+                    <input type="tel" name="phone" id="phone" placeholder="Teléfono">
 
-                <label for="correo">Correo electrónico:</label>
-                <input type="text" id="correo" name="correo" required="required" /><br>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Email">
 
-                <label for="teléfono">Teléfono:</label>
-                <input type="text" id="teléfono" name="teléfono" required="required" /><br>
+                    <label for="message">Mensaje</label>
+                    <textarea name="message" id="message" cols="30" rows="5" placeholder="Mensaje"></textarea>
 
-                <label for="Razón">Razón del contacto:</label>
-                <input type="text" id="Razón" name="Razón" required="required" /><br>
-
-                <input type="checkbox" id="nosoyunrobot" value="nosoyunrobot"> <label for="nosoyunrobot">No soy un
-                    robot</label><br>
-
-                <button type="submit" name="enviar">Enviar</button> <button type="reset"
-                    name="reiniciar">Cancelar</button>
-
-
+                    <div class="form-txt">
+                        <a href="#">Política de Privacidad</a>
+                        <a href="#">Términos y Condiciones</a>
+                    </div>
+                    <input class="btn" type="submit" value="Enviar"> <input class="btn" type="button" value="Cancelar">
+                </div>
             </form>
 
         </section>
