--- a/index.html
+++ b/index.html
@@ -84,14 +84,11 @@
                                 <li>Inventario</li>
                                 <li>Mantenimiento del Software</li>
                             </ul>
-                            <p class="title">
-
-                            </p>
                             <p class="date">Febrero 2019 - Marzo 2019</p>
                             <P class="ubi">Ubicación</P>
                             <iframe class="frame"
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3352.678614137895!2d-79.91190009640137!3d-2.1424719897104962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6d7b17e460c1%3A0x58310d16fe43dad4!2sCNEL%20EP%20-%20Oficina%20Planta%20Norte%2C%20Guayaquil%2C%20Ecuador!5e0!3m2!1ses-419!2sec!4v1716231111955!5m2!1ses-419!2sec"
-                                width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </div>
@@ -110,9 +107,9 @@
                             </ul>
                             <p class="date">Enero del 2023 - Mayo del 2023</p>
                             <P class="ubi">Ubicación</P>
-                            <iframe
+                            <iframe class="frame"
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15948.207412989688!2d-79.91336256037164!3d-2.133776472599118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6d6c473b4f7d%3A0xce9e50186bf58bd8!2sLa%20Alborada%2C%20Guayaquil!5e0!3m2!1ses!2sec!4v1716600370244!5m2!1ses!2sec"
-                                width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                                width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </div>
@@ -228,41 +225,56 @@
 
         <section class="proyects" id="proyectos">
             <h2 class="subtitulo">Proyectos</h2>
+            <p>Al hacer click en la imagen les enviará al repositorio en donde se encuentra alojado el proyecto</p>
             <div class="proyects_container">
-                <div class="enlaces" id="dron">
-                    <img src="" alt="proyecto_pagina_Web">
-                    <a
-                        href="https://www.figma.com/proto/453F1IG0e1xKUBE0k8g5DY/Dron?node-id=7-8&scaling=scale-down&page-id=0%3A1&starting-point-node-id=19%3A2">
-                        Prototipo App de sistema de riesgo de Drones
+                <div class="pag">
+                    <a href="https://colegiofiscalsimonbolivar-simulators.netlify.app/" target="_blank">
+                        <img src="img/pagweb.png" alt="proyecto_pagina_Web">
                     </a>
                 </div>
 
-                <div>
-                    <img src="" alt="diseño_SistemaDron">
+                <div class="dron">
+                    <a href="https://www.figma.com/proto/453F1IG0e1xKUBE0k8g5DY/Dron?node-id=7-8&scaling=scale-down&page-id=0%3A1&starting-point-node-id=19%3A2"
+                        target="_blank">
+                        <img src="img/dron.png" alt="diseño_SistemaDron">
+                    </a>
+
                 </div>
 
-                <div>
-                    <img src="" alt="proyecto_reservaAvion">
+                <div class="pedidos">
+                    <a href="https://github.com/jair-chaguay/Sistema_de_Pedidos" target="_blank">
+                        <img src="img/Pedidos1.png" alt="proyecto_sistemaDePedidos2">
+                    </a>
                 </div>
 
-                <div>
-                    <img src="" alt="proyecto_sistemaDePedidos">
+                <div class="bd">
+                    <a href="https://github.com/jair-chaguay/Simulacion_Bd_Duolingo" target="_blank">
+                        <img src="img/bd.png" alt="proyecto_BdDuolingo">
+                    </a>
                 </div>
 
-                <div>
-                    <img src="" alt="proyecto_BdDuolingo">
+                <div class="app_contactos">
+                    <a href="https://github.com/Niariasve/AppContactos" target="_blank">
+                        <img src="img/AppContactos.png" alt="proyectoAppContactos">
+                    </a>
                 </div>
 
-                <div>
-                    <img src="" alt="proyectoAppContactos">
-                </div>
-
-                <div>
-                    <img src="" alt="ProyectoTresEnRaya">
+                <div class="XO">
+                    <a href="https://github.com/jair-chaguay/AppTicTacToe" target="_blank">
+                        <img src="img/X_O1.png" alt="ProyectoTresEnRaya1">
+                    </a>
                 </div>
             </div>
-        </section>
 
+            <h2 class="subtitulo">Videos</h2>
+            <div class="proyects_container">
+                <video src="video/2024-06-02 13-09-55.mkv" controls width="400px"></video>
+                <video src="video/2024-06-02 13-23-11.mkv" controls width="400px"></video>
+                <video src="video/2024-06-02 13-29-18.mkv" controls width="400px"></video>
+                <video src="video/2024-06-02 18-32-17.mkv" controls width="400px"></video>
+                <video src="video/2024-06-02 18-34-27.mkv" controls width="400px"></video>
+            </div>
+        </section>
 
         <section class="contacto" id="contact">
             <h2 class="subtitulo">Formulario de Contacto</h2>
@@ -289,8 +301,10 @@
             </form>
 
         </section>
-        <footer>
-            <p>Copyright ©ESPOL 2024</p>
+        <footer class="foote">
+            <div class="copyright">
+                   <p>Copyright ©ESPOL 2024</p>
+            </div>
         </footer>
 
     </div>
