--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="img_perfil">
-                        <img src="https://i.pinimg.com/550x/9c/ba/8b/9cba8bd121fac637e1b4b0b49d18c91e.jpg"
+                        <img src="img/perfil.jpeg"
                             alt="Spider-Image" class="img_profile">
                     </div>
 
@@ -56,18 +56,7 @@
                     </div>
                 </div>
             </div>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dignissim
-                velit sed lacus
-                fermentum ultricies.
-                Nam ante urna, lobortis in tellus in, vestibulum malesuada orci. Vivamus consectetur risus
-                vel faucibus ornare.
-                Duis dictum bibendum dui in tincidunt. Duis in imperdiet nisl. Nam ac tristique dolor.
-                Praesent est eros, faucibus
-                ac iaculis venenatis, venenatis id libero. Quisque nisl risus, vulputate vitae orci sed,
-                aliquam dictum ante.
-                Maecenas sit amet odio erat. Class aptent taciti sociosqu ad litora torquent per conubia
-                nostra, per inceptos
-                himenaeos. Nunc sit amet nibh aliquet, feugiat elit ut, bibendum nulla.
+            <p class="description">Soy un estudiante que actualmente está cursando la carrera de Ingeniería en Computación. Estoy en constante búsqueda de conocimiento y nuevas habilidades para desarrollarme como futuro profesional en el campo de la tecnología. Me considero una persona creativa y con habilidades para resolver problemas. Mi objetivo es seguir creciendo como programador, explorando nuevas tecnologías y contribuyendo al desarrollo de soluciones innovadoras que puedan impactar positivamente en la sociedad.
             </p>
 
         </section>
